--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
   <script type="module" src="/src/main.ts"></script>
-  <script src="/src/iconfont.js"></script>
+  <!-- <script src="/src/iconfont.js"></script> -->
+  <script src="//at.alicdn.com/t/c/font_3282087_unzoa30qkah.js"></script>
 </head>
 
 <body>
