--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <title>Sky UI</title>
   <script type="module" src="/src/main.ts"></script>
   <!-- <script src="/src/iconfont.js"></script> -->
-  <script src="//at.alicdn.com/t/c/font_3282087_kgp8rifu3e8.js"></script>
+  <script src="//at.alicdn.com/t/c/font_3282087_s8lllrc2h8.js"></script>
 </head>
 
 <body>
